@@ -1,3 +1,7 @@
+2010-09-12      1.8     INCOMPATIBLE CHANGE: constructor will now return
+                          a minimal object instead of undef if there's no
+                          country-specific module available
+
 2010-07-05      1.7101  Bugfix for N::P->new('CC', '+NN12345');
 
 2010-07-02      1.7100  Bugfix for N::P->new('CC', '12345');
